--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-aa<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
   <head>
@@ -22,9 +22,6 @@ aa<!DOCTYPE html>
     <link rel="stylesheet"href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
 <!--
 
-TemplateMo 579 Cyborg Gaming
-
-https://templatemo.com/tm-579-cyborg-gaming
 
 -->
   </head>
@@ -46,7 +43,7 @@ https://templatemo.com/tm-579-cyborg-gaming
 
   
 
-<iframe width="1920" height="1080" src="https://www.youtube.com/embed/AMbS3l9jNWk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="1280" height="720" src="https://www.youtube.com/embed/AMbS3l9jNWk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
        
 
